# intel-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: sources.yaml
docs/: AI_KNOWLEDGE_PIPELINE_BLUEPRINT.md  ARCHITECT_FIRST_PROTOCOL.md  SPRINT_1_SIGNOFF.md
docs/adr/: ADR-001-storage-abstraction.md  ADR-002-document-identity.md  README.md
scripts/: sync-blueprint.ps1  verify-sprint1.ps1  verify-step1.ps1  verify-step2.ps1  verify-step3.ps1  verify-step4.ps1  verify-step5.ps1  verify-step6.ps1
src/pipeline/: __init__.py  __main__.py
src/pipeline/cli/: __init__.py  main.py
src/pipeline/config/: __init__.py  settings.py  sources.py
src/pipeline/db/: __init__.py  engine.py  migrate.py  repositories.py  schema.py  session.py  timeutil.py
src/pipeline/ingest/: __init__.py  dedup.py  normalize.py  processor.py  results.py  runner.py
src/pipeline/logging/: __init__.py  setup.py
src/pipeline/models/: __init__.py  document.py  enums.py  hashing.py  run.py  source.py
src/pipeline/storage/: __init__.py  artifacts.py  local.py  paths.py  protocol.py
tests/: conftest.py  test_cli_ingest.py  test_content_hash.py  test_db.py  test_ingest_adapters.py  test_ingest_dedup.py  test_ingest_normalize.py  test_ingest_processor.py  test_integration_sprint1.py  test_migrate.py  test_models.py  test_settings.py  test_smoke.py  test_sources_yaml.py  test_storage_local.py
tests/fixtures/feeds/: cyber-thehackernews.xml  ds-ml-mastery.xml  tech-hackernews.xml
tests/fixtures/html/: sample_article.html
(+6 files in other folders)
