[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intel-pipeline"
version = "0.1.0"
description = "AI Knowledge Pipeline — ingest, evaluate, synthesize, and deliver audio briefings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=2.0",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "integration: live network tests (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["pipeline"]
